# devops-project

./: .bandit  .flake8  .pre-commit-config.yaml  .yamllint.yml  DOCKER_SETUP.md  Dockerfile  README.md  TESTING_AND_QUALITY.md  backend_app.py  create_envs.py  frontend_app.py  pyproject.toml  req.txt
.github/workflows/: docker-build-push.yml
helm/: values.yaml
helm/devops-project/: Chart.yaml  values.yaml
helm/devops-project/templates/: backend.yaml  frontend.yaml  services.yaml
helm/templates/: postgres.yaml  secret.yaml
k8s/: k8s-backend.yaml  k8s-frontend.yaml  k8s-postgres.yaml
tests/: conftest.py  test_backend_app.py  test_create_envs.py  test_frontend_app.py
